@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.1.13.RELEASE</version>
+            <version>5.3.39</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
