@@ -1,6 +1,7 @@
 Changelog next version
 ----------------------
-* MockMvc multipart uploading works with Spring 7.x
+* spring-mock-mvc module now supports Spring 7.x
+* spring-web-test-client now supports Spring 7.x
 * Upgraded commons-lang3 from 3.18.0 to 3.19.0
 
 Changelog 5.5.6 (2025-08-15)
